fix purpose spacing

--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -13,7 +13,7 @@
   }
 
   .belief {
-    @include grid-column($columns:12)
+    @include grid-column($columns:12);
     @include grid-row();
     margin-bottom: rem-calc(40px);
 
